2008-08-02  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Fix syntax of "plot index": If only two
	numbers are supplied, it's the third number (the stride) that has
	been omitted.  Therefore, the third number should be in the
	innermost braces.

2008-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): Ignore NULL labels. This prevents possible
	segfault if tic labels are requested from a non-existent data column.

	* src/plot2d.c (eval_plots): Remove order dependency of newhist options.

2008-07-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) src/graphics.c (do_plot):
	Histograms did not correctly honor 'set style user increment'.
	Bugfix.

2008-07-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp(wxt_set_color) 
	term/cairo.trm(cairotrm_set_color):
	Pay attention to the value of 'set palette maxcolors'.
	Bugfix.

2008-07-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (grid_nongrid_data): Honor the axis range limits when
	drawing dgrid3d surfaces.
	Bug #1363641

2008-07-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
	from an expression then force evaluation of all column contents.
	Otherwise references to column() return uninitialized garbage. Bugfix.

2008-07-24  Jozef Vesely  <vesely@gjh.sk>

	* src/datafile.c src/datafile.h:  Binary data types for 64-bit ints
	(long long).

2008-07-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix various typos and cross-reference formats.

2008-07-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/command.c (pause_command) src/command.h:
	New variant 'pause mouse close' will pause until the plot window is
	closed. Unlike existing variants, this does not disable mouse-clicks,
	hotkeys, or zooming.  Add wxt to the list of terminals that need a
	work-around to avoid losing an input character when the plot window